--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -1078,6 +1078,8 @@ cursor: pointer;
 /* 4.1.3 User Menu */
 //////////////////////////////////////////////////////////////////
 
+// because od toggling I left some bootstrap styles
+
 .usermenu__container{
     background-color: white;
     box-shadow: 0px 6px 8px #00000029;
