--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -1176,6 +1176,12 @@ cursor: pointer;
     }
 }
 
+.navbar-toggler:focus{
+    outline: none;
+    border: 0;
+    box-shadow: none;
+}
+
 
 //////////////////////////////////////////////////////
 /* --- --- 4.1.1  Layouts */
