--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -411,6 +411,10 @@ input[type='text']:hover, input[type='text']:focus, input[type='text']:active, i
   text-decoration: none !important;
 }
 
+.green--button:active {
+  background-color: #A1D218;
+}
+
 @media (max-width: 576px) {
   .green--button {
     font-size: 12px !important;
