--- a/mLingo/ClientApp/src/schema/styles/mLingo.scss
+++ b/mLingo/ClientApp/src/schema/styles/mLingo.scss
@@ -114,6 +114,12 @@ font-size: 16px;
 // container //
 
 .all__containers__in__user__section{
-  flex: 0 0 100%;
-  max-width: 100%;
+  flex: 0 0 79%;
+  max-width: 79%;
+}
+@media(max-width: $mobile-res){
+  .all__containers__in__user__section{
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
 }
