--- a/mLingo/ClientApp/src/styles/css/mLingo.css
+++ b/mLingo/ClientApp/src/styles/css/mLingo.css
@@ -309,7 +309,16 @@ input[type='text']:hover, input[type='text']:focus, input[type='text']:active, i
 
 .all__containers__in__user__section {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 100%;
-          flex: 0 0 100%;
-  max-width: 100%;
+      -ms-flex: 0 0 79%;
+          flex: 0 0 79%;
+  max-width: 79%;
+}
+
+@media (max-width: 576px) {
+  .all__containers__in__user__section {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    max-width: 100%;
+  }
 }
