--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -1085,15 +1085,16 @@ cursor: pointer;
     box-shadow: 0px 6px 8px #00000029;
 
     display: none;
-    @media(min-width: $tablet-res){
+    @media(min-width: 991px){
         display: block;
     }
     // usermenu 100vh when is collapsed!!
 
-    @media(max-width: $tablet-res){
+    @media(max-width: 991px){
       div.collapse, div.collapsing{
-        width: 100vw;
-        height: 100vh;
+        width: 100vw !important;
+        margin: 0 !important;
+        height: 100vh !important;
         overflow: hidden;
       }
     }
@@ -1102,13 +1103,13 @@ cursor: pointer;
       padding: 10px 15px;
     }
 
-    @media(min-width:768px){
+    @media(min-width:991px){
       .navbar-toggler{
         display:none;
       }
     }
 
-    @media(max-width: 767px){
+    @media(max-width: 991px){
       .navbar-toggler-icon{
         position: relative;
         padding: 10px;
@@ -1159,14 +1160,20 @@ cursor: pointer;
 
 .usermenu--dark{
     display: none;
-    @media(max-width: $tablet-res){
+    @media(max-width: 990px){
         display: block;
         background-color: $dark-blue;
 
+
         div.collapse, div.collapsing{
+            display: none !important;
+        }
+
+        div.collapse.show, div.collapsing.show{
+            display: block !important;
             background-color: white;
             z-index: 999;
-            position: absolute;
+            position: fixed;
             left: 0;
             top:80px;
         }
