--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -1085,7 +1085,7 @@ cursor: pointer;
     box-shadow: 0px 6px 8px #00000029;
 
     display: none;
-    @media(min-width: 991px){
+    @media(min-width: 992px){
         display: block;
     }
     // usermenu 100vh when is collapsed!!
@@ -1103,7 +1103,7 @@ cursor: pointer;
       padding: 10px 15px;
     }
 
-    @media(min-width:991px){
+    @media(min-width:992px){
       .navbar-toggler{
         display:none;
       }
@@ -1160,7 +1160,7 @@ cursor: pointer;
 
 .usermenu--dark{
     display: none;
-    @media(max-width: 990px){
+    @media(max-width: 991px){
         display: block;
         background-color: $dark-blue;
 
@@ -1175,13 +1175,24 @@ cursor: pointer;
             z-index: 999;
             position: fixed;
             left: 0;
-            top:80px;
+            top:100px;
+
+            .app__background{
+                position: fixed !important;
+            }
         }
         .navbar-toggler-icon::after, .navbar-toggler-icon::before{
             background-color: white;
         }
+
+
+    }
+
+    @media(max-width: $tablet-res){
+        top:80px;
     }
 }
+
 
 .navbar-toggler:focus{
     outline: none;
