--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -474,6 +474,15 @@ input[type='text']:hover, input[type='text']:focus, input[type='text']:active, i
   max-width: 79%;
 }
 
+@media (max-width: 991px) {
+  .all__containers__in__user__section, .collection__container, .userhead__container {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
 @media (max-width: 576px) {
   .all__containers__in__user__section, .collection__container, .userhead__container {
     -webkit-box-flex: 0;
@@ -12350,7 +12359,7 @@ a.text-dark:hover, a.text-dark:focus {
   display: none;
 }
 
-@media (min-width: 991px) {
+@media (min-width: 992px) {
   .usermenu__container {
     display: block;
   }
@@ -12369,7 +12378,7 @@ a.text-dark:hover, a.text-dark:focus {
   padding: 10px 15px;
 }
 
-@media (min-width: 991px) {
+@media (min-width: 992px) {
   .usermenu__container .navbar-toggler {
     display: none;
   }
@@ -12433,7 +12442,7 @@ a.text-dark:hover, a.text-dark:focus {
   display: none;
 }
 
-@media (max-width: 990px) {
+@media (max-width: 991px) {
   .usermenu--dark {
     display: block;
     background-color: #000536;
@@ -12447,10 +12456,19 @@ a.text-dark:hover, a.text-dark:focus {
     z-index: 999;
     position: fixed;
     left: 0;
-    top: 80px;
+    top: 100px;
+  }
+  .usermenu--dark div.collapse.show .app__background, .usermenu--dark div.collapsing.show .app__background {
+    position: fixed !important;
   }
   .usermenu--dark .navbar-toggler-icon::after, .usermenu--dark .navbar-toggler-icon::before {
     background-color: white;
+  }
+}
+
+@media (max-width: 991px) {
+  .usermenu--dark {
+    top: 80px;
   }
 }
 
