--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -12528,6 +12528,13 @@ main.container, main.footer__container {
   padding: 50px;
 }
 
+:root {
+  --duration: 1.5s;
+  --container-size: 250px;
+  --box-size: 33px;
+  --box-border-radius: 15%;
+}
+
 .loading__body {
   width: 100%;
   height: 100%;
@@ -12547,6 +12554,7 @@ main.container, main.footer__container {
 
 .loading__container {
   width: var(--container-size);
+  height: 250px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -12583,13 +12591,7 @@ main.container, main.footer__container {
 }
 
 .📦:nth-child(1) {
-  -webkit-animation: slide var(--duration) ease-in-out infinite alternate;
-          animation: slide var(--duration) ease-in-out infinite alternate;
-}
-
-.📦:nth-child(1):after {
-  -webkit-animation: color-change var(--duration) ease-in-out infinite alternate;
-          animation: color-change var(--duration) ease-in-out infinite alternate;
+  display: none;
 }
 
 .📦:nth-child(2) {
@@ -12633,45 +12635,19 @@ main.container, main.footer__container {
 }
 
 .📦:nth-child(2):after {
-  background-color: #1C9FFF;
+  background-color: #000536;
 }
 
 .📦:nth-child(3):after {
-  background-color: #1FB1FD;
+  background-color: #A1D218;
 }
 
 .📦:nth-child(4):after {
-  background-color: #22C7FB;
+  background-color: #000536;
 }
 
 .📦:nth-child(5):after {
-  background-color: #23D3FB;
-}
-
-@-webkit-keyframes slide {
-  0% {
-    background-color: #1795FF;
-    -webkit-transform: translatex(0vw);
-            transform: translatex(0vw);
-  }
-  100% {
-    background-color: #23D3FB;
-    -webkit-transform: translatex(calc(var(--container-size) - (var(--box-size) * 1.25)));
-            transform: translatex(calc(var(--container-size) - (var(--box-size) * 1.25)));
-  }
-}
-
-@keyframes slide {
-  0% {
-    background-color: #1795FF;
-    -webkit-transform: translatex(0vw);
-            transform: translatex(0vw);
-  }
-  100% {
-    background-color: #23D3FB;
-    -webkit-transform: translatex(calc(var(--container-size) - (var(--box-size) * 1.25)));
-            transform: translatex(calc(var(--container-size) - (var(--box-size) * 1.25)));
-  }
+  background-color: #A1D218;
 }
 
 @-webkit-keyframes color-change {
