--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -13,6 +13,7 @@
 /* --- --- 1.1.4 CollectionScreen
 // --- 1.2 set_
 /* --- --- 1.2.1 SetCard */
+/* --- --- 1.2.2 SetScreen */
 // --- 1.3 user_
 /* --- --- 1.3.1 UserHead */
 /* --- --- 1.3.2 UserHead Section */
@@ -229,6 +230,28 @@
     font-size: 1.5em;
     color: $dark-blue;
 }
+
+//////////////////////////////////////////////////////
+/* --- --- 1.2.2 SetScreen */
+//////////////////////////////////////////////////////
+
+.set__container{
+    @extend .all__containers__in__user__section;
+    padding: 50px;
+}
+
+.set__title{
+    color: $dark-blue;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.card--setscreen{
+    margin: 40px 0;
+    width: 200px;
+    height: 200px;
+}
+
 
 //////////////////////////////////////////////////////
 /* --- --- 1.3.1 UserHead */
