--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -468,7 +468,7 @@ input[type='text']:hover, input[type='text']:focus, input[type='text']:active, i
   outline: none;
 }
 
-.all__containers__in__user__section, .collection__container, .userhead__container {
+.all__containers__in__user__section, .collection__container, .set__container, .userhead__container {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 79%;
           flex: 0 0 79%;
@@ -476,7 +476,7 @@ input[type='text']:hover, input[type='text']:focus, input[type='text']:active, i
 }
 
 @media (max-width: 991px) {
-  .all__containers__in__user__section, .collection__container, .userhead__container {
+  .all__containers__in__user__section, .collection__container, .set__container, .userhead__container {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 100%;
             flex: 0 0 100%;
@@ -485,7 +485,7 @@ input[type='text']:hover, input[type='text']:focus, input[type='text']:active, i
 }
 
 @media (max-width: 576px) {
-  .all__containers__in__user__section, .collection__container, .userhead__container {
+  .all__containers__in__user__section, .collection__container, .set__container, .userhead__container {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 100%;
             flex: 0 0 100%;
@@ -11266,6 +11266,7 @@ a.text-dark:hover, a.text-dark:focus {
 /* --- --- 1.1.4 CollectionScreen
 // --- 1.2 set_
 /* --- --- 1.2.1 SetCard */
+/* --- --- 1.2.2 SetScreen */
 /* --- --- 1.3.1 UserHead */
 /* --- --- 1.3.2 UserHead Section */
 /* --- --- 2.1.1 Formulars Login and Register */
@@ -11456,6 +11457,23 @@ a.text-dark:hover, a.text-dark:focus {
 .search__title, .search__nofound {
   font-size: 1.5em;
   color: #000536;
+}
+
+/* --- --- 1.2.2 SetScreen */
+.set__container {
+  padding: 50px;
+}
+
+.set__title {
+  color: #000536;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.card--setscreen {
+  margin: 40px 0;
+  width: 200px;
+  height: 200px;
 }
 
 /* --- --- 1.3.1 UserHead */
