--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -252,6 +252,24 @@
     height: 200px;
 }
 
+.set__form{
+    @extend .col-12, .col-lg-8;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+input[type=text].details--set{
+    height: 40px;
+    width: 100%;
+}
+
+.form__group{
+    width: 56%;
+    margin: 20px 0px 20px 20px;
+    display: flex;
+    flex-direction: column;
+}
+
 
 //////////////////////////////////////////////////////
 /* --- --- 1.3.1 UserHead */
