--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -238,9 +238,12 @@
 .set__container{
     @extend .all__containers__in__user__section;
     padding: 50px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .set__title{
+    @extend .col-12;
     color: $dark-blue;
     font-weight: bold;
     font-size: 24px;
@@ -268,6 +271,15 @@ input[type=text].details--set{
     margin: 20px 0px 20px 20px;
     display: flex;
     flex-direction: column;
+}
+
+.set__info{
+    @extend .col-12, .col-lg-4;
+    padding: 30px;
+    background-color: white;
+    box-shadow: 0px 6px 8px #00000029;
+    border-radius: 25px;
+    text-align: center;
 }
 
 
