--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -1123,7 +1123,7 @@ pre code {
   padding-left: 0;
 }
 
-.col-1, .col-2, .col-3, .col-4, .col-5, .flashcard__card, .col-6, .leftcircle__container, .rightcircle__container, .col-7, .col-8, .col-9, .col-10, .newsletter__thanks, .col-11, .col-12, .create__details, .flashcard__container, .set__form, .forminput__container, .forminput__input, .form__title, .form__form, .form__alreadyaccount, .form__getstarted, .form__remember, .formsocials__container, .fbconnect__button, .ggconnect__button, .newsletter__section, .col,
+.col-1, .col-2, .col-3, .col-4, .col-5, .flashcard__card, .col-6, .leftcircle__container, .rightcircle__container, .col-7, .col-8, .col-9, .col-10, .newsletter__thanks, .col-11, .col-12, .create__details, .flashcard__container, .set__title, .set__form, .set__info, .forminput__container, .forminput__input, .form__title, .form__form, .form__alreadyaccount, .form__getstarted, .form__remember, .formsocials__container, .fbconnect__button, .ggconnect__button, .newsletter__section, .col,
 .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .newsletter__subscribe, .col-sm-11, .col-sm-12, .create__container, .create--collection, .step__details, .col-sm,
 .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .opinion__description, .col-md-8, .opinion__container, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
 .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .step__element, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
@@ -1271,7 +1271,7 @@ pre code {
   max-width: 91.66667%;
 }
 
-.col-12, .create__details, .flashcard__container, .set__form, .forminput__container, .forminput__input, .form__title, .form__form, .form__alreadyaccount, .form__getstarted, .form__remember, .formsocials__container, .fbconnect__button, .ggconnect__button, .newsletter__section {
+.col-12, .create__details, .flashcard__container, .set__title, .set__form, .set__info, .forminput__container, .forminput__input, .form__title, .form__form, .form__alreadyaccount, .form__getstarted, .form__remember, .formsocials__container, .fbconnect__button, .ggconnect__button, .newsletter__section {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 100%;
           flex: 0 0 100%;
@@ -1956,7 +1956,7 @@ pre code {
             flex: 0 0 25%;
     max-width: 25%;
   }
-  .col-lg-4, .form__getstarted {
+  .col-lg-4, .set__info, .form__getstarted {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 33.33333%;
             flex: 0 0 33.33333%;
@@ -11462,6 +11462,11 @@ a.text-dark:hover, a.text-dark:focus {
 /* --- --- 1.2.2 SetScreen */
 .set__container {
   padding: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .set__title {
@@ -11499,6 +11504,15 @@ input[type=text].details--set {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.set__info {
+  padding: 30px;
+  background-color: white;
+  -webkit-box-shadow: 0px 6px 8px #00000029;
+          box-shadow: 0px 6px 8px #00000029;
+  border-radius: 25px;
+  text-align: center;
 }
 
 /* --- --- 1.3.1 UserHead */
