--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -1384,7 +1384,7 @@ pre code {
   margin-left: 33.33333%;
 }
 
-.offset-5 {
+.offset-5, .createset__button {
   margin-left: 41.66667%;
 }
 
@@ -9262,6 +9262,7 @@ button.bg-dark:focus {
 
 .mt-5, .form__getstarted, .steps__title, .steps__list,
 .my-5,
+.createset__button,
 .newsletter__email,
 .step__element {
   margin-top: 3rem !important;
@@ -9274,6 +9275,7 @@ button.bg-dark:focus {
 
 .mb-5, .form__title, .form__remember, .newsletter__title,
 .my-5,
+.createset__button,
 .newsletter__email,
 .step__element {
   margin-bottom: 3rem !important;
