--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -285,6 +285,26 @@ input[type=text].details--set{
 .createset__button{
     @extend .offset-5, .my-5;
 }
+
+
+.searched__collections{
+    @extend .col-12;
+    padding: 30px;
+    margin: 25px 0;
+    background-color: white;
+    box-shadow: 0px 6px 8px #00000029;
+    border-radius: 25px;
+    text-align: center;
+}
+
+.searched__item{
+    border-bottom: 1px solid $dark-blue;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+}
+
 //////////////////////////////////////////////////////
 /* --- --- 1.3.1 UserHead */
 //////////////////////////////////////////////////////
