--- a/mLingo/ClientApp/src/styles/old.scss
+++ b/mLingo/ClientApp/src/styles/old.scss
@@ -39,7 +39,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url("../../img/slid3.jpg") fixed;
+  background: url("../img/slid3.jpg") fixed;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
