--- a/mLingo/ClientApp/src/styles/Main.scss
+++ b/mLingo/ClientApp/src/styles/Main.scss
@@ -324,12 +324,24 @@
     margin: 20px  0;
 }
 
-.learn__slider{
+.learn__slide{
     width: 400px;
     height: 250px;
     text-align: center;
     background: white;
     border-radius: 25px;
+    color: $dark-blue;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.learnslide__caption{
+    width: 100%;
+    height: 100%;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
 }
 
 .learn__title{
