fix some animations and add completion screen

--- a/mLingo/ClientApp/src/styles/mLingo.scss
+++ b/mLingo/ClientApp/src/styles/mLingo.scss
@@ -111,6 +111,14 @@ font-size: 16px;
   }
 }
 
+.button--back{
+  margin: 50px !important;
+}
+
+.learn__dashboard{
+  height: 100%;
+}
+
 // container //
 
 .all__containers__in__user__section{
