--- a/mLingo/ClientApp/src/styles/Main.scss
+++ b/mLingo/ClientApp/src/styles/Main.scss
@@ -281,11 +281,11 @@
 //////////////////////////////////////////////////////
 
 .learn__carousel{
- width: 400px;
- height: 250px;
- border-radius: 25px !important;
- box-shadow: 0px 6px 8px #00000029;
- margin-top: 100px;
+    @extend .flex--complet;
+    width: 450px;
+    height: 300px;
+    border-radius: 25px !important;
+    margin-top: 100px;
 }
 
 .carousel-inner{
@@ -299,24 +299,26 @@
     height: 50px;
     opacity: 1;
     border-radius: 100%;
-    top: 100px;
+    top: 125px;
 }
 
 .control--left{
-    left: -60px;
+    left: -40px;
 }
 
 .control--right{
-    right: -60px;
+    right: -40px;
 }
 
-.learn__dashbord{
+.learn__dashboard{
     @extend .flex--complet, .col-9;
     margin: 0px 50px 50px 0;
 }
 
 .learn__details{
-    @extend .col-4;
+    @extend .col-12, .flex--complet;
+    justify-content: space-between;
+    margin: 20px 40px 0px 40px;
 }
 
 .learn__img{
@@ -324,7 +326,29 @@
     margin: 20px  0;
 }
 
-.learn__slide, .learn__flashcard{
+.learn__slide{
+    width: 450px;
+    height: 300px;
+}
+
+
+.learnslide__caption{
+    width: 400px;
+    height: 250px;
+    text-align: center;
+    background: white;
+    border-radius: 25px;
+    color: $dark-blue;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 25px;
+
+    animation: card-show 1s ease-in-out forwards;
+    transition: 0.5s;
+}
+
+.learn__flashcard{
     width: 400px;
     height: 250px;
     text-align: center;
@@ -336,14 +360,49 @@
     cursor: pointer;
 }
 
+.flashcard--active{
+    animation: card-flip 0.5s ease-in-out;
+}
+
+@keyframes card-flip{
+    100%{
+        transform: rotateY(180deg);
+        font-size: 22px;
+    }
+    90%{
+        font-size: 0;
+    }
+    0%{
+        font-size: 0;
+    }
+}
+
+@keyframes card-show{
+    0%{
+        opacity:0;
+    }
+    60%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+        box-shadow: 0px 6px 8px #00000029;
+    }
+}
+.learning__term{
+    @extend .flex--complet;
+    height: 100%;
+    h3{
+        font-size: 22px;
+    }
+}
+
 .learn__flashcard{
 margin: 80px 40px 40px 40px;
  box-shadow: 0px 6px 8px #00000029;
 }
 
 .learnslide__caption{
-    width: 100%;
-    height: 100%;
     display: flex !important;
     justify-content: center;
     align-items: center;
@@ -355,7 +414,7 @@ margin: 80px 40px 40px 40px;
 }
 
 .learn__body{
-    @extend .col-8;
+    @extend .col-12;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -366,9 +425,38 @@ margin: 80px 40px 40px 40px;
     @extend .green--button;
     width: 200px;
     margin: 20px;
+    text-align: center;
 }
 
+.session--flashcard{
+    animation: card-show 0.5s ease-in-out forwards;
+}
+.session--finished{
+    margin: 50px;
+    padding: 50px;
+    background: white;
+    border-radius: 25px;
+    box-shadow: 0px 6px 8px #00000029;
+    width: 100%;
+    height: 100%;
+    @extend .flex--complet;
+    svg{
+        font-size: 68px;
+        @extend .col-12;
+        margin: 20px;
+    }
+}
 
+.finished__header{
+    @extend .col-12;
+    text-align: center;
+    font-size: 18px;
+}
+
+.header--first{
+    font-weight:bold;
+    font-size: 24px;
+}
 
 //////////////////////////////////////////////////////
 /* --- --- 1.2.2 SetScreen */
@@ -473,6 +561,11 @@ input[type=text].details--set{
 //////////////////////////////////////////////////////
 /* --- --- 1.3.2 UserHead Section */
 //////////////////////////////////////////////////////
+
+
+.userhead__section{
+    @extend .col-12;
+}
 
 .section__title{
     color:$dark-blue;
